--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "ngx-markdown": "^8.1.0",
+    "ngx-quill": "^7.2.0",
     "normalize.css": "^8.0.1",
+    "quill": "^1.3.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
